Added usage examples section

--- a/public/page-object/components/index.html
+++ b/public/page-object/components/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-  <head>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta name="generator" content="Hugo 0.124.1">
@@ -13,29 +13,29 @@
     <meta property="og:title" content="Components :: Wrappedelements framework">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="/page-object/components/index.html">
+    <meta property="og:url" content="//localhost:1313/page-object/components/index.html">
     <meta property="og:site_name" content="Wrappedelements framework">
     <title>Components :: Wrappedelements framework</title>
     <link href="/page-object/components/index.xml" rel="alternate" type="application/rss+xml" title="Components :: Wrappedelements framework"> <link rel="icon" href="/images/favicon.png" type="image/png">
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
-    <link href="/css/fontawesome-all.min.css?1711810876" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fontawesome-all.min.css?1711810876" rel="stylesheet"></noscript>
-    <link href="/css/nucleus.css?1711810876" rel="stylesheet">
-    <link href="/css/auto-complete.css?1711810876" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/auto-complete.css?1711810876" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar.min.css?1711810876" rel="stylesheet">
-    <link href="/css/fonts.css?1711810876" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fonts.css?1711810876" rel="stylesheet"></noscript>
-    <link href="/css/theme.css?1711810876" rel="stylesheet">
-    <link href="/css/theme-auto.css?1711810876" rel="stylesheet" id="R-variant-style">
-    <link href="/css/chroma-auto.css?1711810876" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="/css/variant.css?1711810876" rel="stylesheet">
-    <link href="/css/print.css?1711810876" rel="stylesheet" media="print">
-    <link href="/css/ie.css?1711810876" rel="stylesheet">
-    <script src="/js/url.js?1711810876"></script>
-    <script src="/js/variant.js?1711810876"></script>
+    <link href="/css/fontawesome-all.min.css?1711952608" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fontawesome-all.min.css?1711952608" rel="stylesheet"></noscript>
+    <link href="/css/nucleus.css?1711952608" rel="stylesheet">
+    <link href="/css/auto-complete.css?1711952608" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/auto-complete.css?1711952608" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar.min.css?1711952608" rel="stylesheet">
+    <link href="/css/fonts.css?1711952608" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fonts.css?1711952608" rel="stylesheet"></noscript>
+    <link href="/css/theme.css?1711952608" rel="stylesheet">
+    <link href="/css/theme-auto.css?1711952608" rel="stylesheet" id="R-variant-style">
+    <link href="/css/chroma-auto.css?1711952608" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="/css/variant.css?1711952608" rel="stylesheet">
+    <link href="/css/print.css?1711952608" rel="stylesheet" media="print">
+    <link href="/css/ie.css?1711952608" rel="stylesheet">
+    <script src="/js/url.js?1711952608"></script>
+    <script src="/js/variant.js?1711952608"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
       window.relearn.relBaseUri='..\/..';
-      window.relearn.absBaseUri='';
+      window.relearn.absBaseUri='\/\/localhost:1313';
       // variant stuff
       window.relearn.themeVariantModifier='';
       window.variants && variants.init( [ 'auto' ] );
@@ -98,7 +98,7 @@
           <article class="chapter">
             <header class="headline">
             </header>
-<div class="article-subheading">Chapter 3</div>
+<div class="article-subheading">Chapter 4</div>
 <h1 id="components">Components</h1>
 
 <h2 id="components-design">Components design</h2>
@@ -235,12 +235,12 @@ WrappedComponents also supports @IOSComponent and @AndroidComponent annotations,
         <script>
           var contentLangs=['en'];
         </script>
-        <script src="/js/auto-complete.js?1711810876" defer></script>
-        <script src="/js/lunr/lunr.min.js?1711810876" defer></script>
-        <script src="/js/lunr/lunr.stemmer.support.min.js?1711810876" defer></script>
-        <script src="/js/lunr/lunr.multi.min.js?1711810876" defer></script>
-        <script src="/js/lunr/lunr.en.min.js?1711810876" defer></script>
-        <script src="/js/search.js?1711810876" defer></script>
+        <script src="/js/auto-complete.js?1711952608" defer></script>
+        <script src="/js/lunr/lunr.min.js?1711952608" defer></script>
+        <script src="/js/lunr/lunr.stemmer.support.min.js?1711952608" defer></script>
+        <script src="/js/lunr/lunr.multi.min.js?1711952608" defer></script>
+        <script src="/js/lunr/lunr.en.min.js?1711952608" defer></script>
+        <script src="/js/search.js?1711952608" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation homelinks">
         <ul>
@@ -252,8 +252,8 @@ WrappedComponents also supports @IOSComponent and @AndroidComponent annotations,
         <div id="R-topics">
           <ul class="enlarge morespace collapsible-menu">
           <li data-nav-id="/overview/index.html" class=""><a class="padding" href="/overview/index.html">Overview</a></li>
-          <li data-nav-id="/configurations/index.html" class=""><a class="padding" href="/configurations/index.html">Configuration</a></li>
           <li data-nav-id="/getting-started/index.html" class=""><a class="padding" href="/getting-started/index.html">Getting Started</a></li>
+          <li data-nav-id="/configurations/index.html" class=""><a class="padding" href="/configurations/index.html">Configuration</a></li>
           <li data-nav-id="/page-object/index.html" class="parent alwaysopen"><input type="checkbox" id="R-section-4a4d7bd0889105a13b1024fa37624245" aria-controls="R-subsections-4a4d7bd0889105a13b1024fa37624245" checked><label for="R-section-4a4d7bd0889105a13b1024fa37624245"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">Submenu Page Object</span></label><a class="padding" href="/page-object/index.html">Page Object</a><ul id="R-subsections-4a4d7bd0889105a13b1024fa37624245" class="morespace collapsible-menu">
           <li data-nav-id="/page-object/components/index.html" class="active"><a class="padding" href="/page-object/components/index.html">Components</a></li>
           <li data-nav-id="/page-object/test-layer/index.html" class=""><a class="padding" href="/page-object/test-layer/index.html">Test Layer</a></li>
@@ -265,6 +265,7 @@ WrappedComponents also supports @IOSComponent and @AndroidComponent annotations,
           <div class="nav-title padding">More</div>
           <ul class="space">
             <li><a class="padding" href="https://github.com/BobFrostMan/wrappedelements"><i class='fa-fw fab fa-github'></i> Github repo</a></li>
+            <li><a class="padding" href="https://github.com/BobFrostMan/wrappedelements-examples"><i class='fa-fw fab fa-github'></i> Usage examples</a></li>
             <li><a class="padding" href="/categories/index.html"><i class='fa-fw fas fa-layer-group'></i> Categories</a></li>
             <li><a class="padding" href="/tags/index.html"><i class='fa-fw fas fa-tags'></i> Tags</a></li>
           </ul>
@@ -319,8 +320,8 @@ WrappedComponents also supports @IOSComponent and @AndroidComponent annotations,
         </div>
       </div>
     </aside>
-    <script src="/js/clipboard.min.js?1711810876" defer></script>
-    <script src="/js/perfect-scrollbar.min.js?1711810876" defer></script>
-    <script src="/js/theme.js?1711810876" defer></script>
+    <script src="/js/clipboard.min.js?1711952608" defer></script>
+    <script src="/js/perfect-scrollbar.min.js?1711952608" defer></script>
+    <script src="/js/theme.js?1711952608" defer></script>
   </body>
 </html>
